Fixing button alignment at bottom of edit account details page

--- a/assets/targets/public/tnew/buttons.css
+++ b/assets/targets/public/tnew/buttons.css
@@ -40,3 +40,7 @@
   color: #666 !important;
   transform: scale(1,1) !important;
 }
+
+.btn.tn-btn-grouped~.btn.tn-btn-grouped {
+  margin-top: 0;
+}
